# lunar

./: .gitignore  CMakeLists.txt  LICENSE  Lunar.code-workspace  README.md  dragDropInstall.py  lunar.mod  releaseNotes.txt  userSetup.py
deep/: autoencoder.py
deep/data/: as_p_scout_idle_to_walk_180r_foot_r.json
lunar/: __init__.py
lunar/abstract/: __init__.py  fbx.py  retarget.py  retargeter.py  rig.py
lunar/maya/: LunarMaya.py  LunarMayaAnim.py  LunarMayaRetarget.py  LunarMayaRig.py  LunarMayaUi.py  __init__.py
lunar/maya/api/: LunarMaya.py  LunarMayaAnim.py  LunarMayaRetarget.py  LunarMayaRig.py  __init__.py
lunar/maya/resources/: __init__.py
lunar/maya/resources/plug-ins/macos/2022/: mlunar.bundle
lunar/maya/resources/plug-ins/macos/2023/: mlunar.bundle
lunar/maya/resources/plug-ins/macos/2024/: mlunar.bundle
lunar/maya/resources/plug-ins/python/: skin.py  utils.py
lunar/maya/resources/plug-ins/windows/2022/: mlunar.mll
lunar/maya/resources/plug-ins/windows/2023/: mlunar.mll
lunar/maya/resources/plug-ins/windows/2024/: mlunar.mll
lunar/maya/resources/retarget/: __init__.py  humanik.py  lego.py  lunarctrl.py  sinnersdev.py  unreal.py
lunar/maya/resources/scripts/: __init__.py  ctrlMainMenu.py  dagMenuProcOverride.mel  hikOverrides.mel  hikOverrides.py  melOverrides.mel
lunar/maya/resources/shelves/: shelf_Bambaa_Animation.mel  shelf_LMAnim.mel
lunar/maya/resources/templates/: AEcomponentTemplate.mel  AEctrlTemplate.mel  AEik2bSolverTemplate.mel  AEmetaDataTemplate.mel
lunar/maya/toolset/: __init__.py  animation.py
lunar/unreal/: __init__.py
lunar/unreal/anim/: __init__.py  fbx.py
lunar/unreal/retarget/: __init__.py  ikrig.py  sinnersdev.py
lunar/unreal/setup/: __init__.py  blutility.py
src/maya/: CMakeLists.txt  ComponentNode.h  Ctrl.cpp  Ctrl.h  CtrlCommand.cpp  CtrlCommand.h  CtrlData.cpp  CtrlData.h  CtrlDrawOverride.cpp  CtrlNode.cpp  CtrlNode.h  FootRollNode.cpp  FootRollNode.h  FootRollSolver.cpp  FootRollSolver.h  Ik2bSolver.cpp  Ik2bSolver.h  IkCommand.cpp  IkCommand.h  LMAnimControl.h  LMAttribute.h  LMObject.h  LMPlugin.h  LMRigUtils.h  LMScene.h  LMSolve.h  LunarMaya.h  MainPlugin.cpp  MathUtility.h  MetaDataCmd.cpp  MetaDataCmd.h  MetaDataNode.cpp  MetaDataNode.h  ShapesDefinition.h  SpaceSwitchNode.h  TwistSolver.cpp  rawfootPrintNode.h
src/maya/api/: CMakeLists.txt  LMAttribute.h  LMSolve.h  LunarMaya.h
src/maya/ctrl/: CMakeLists.txt  Ctrl.cpp  Ctrl.h  CtrlCommand.cpp  CtrlCommand.h  CtrlData.cpp  CtrlData.h  CtrlDrawOverride.cpp  CtrlDrawOverride.h
src/maya/misc/: CMakeLists.txt  MetaDataCmd.cpp  MetaDataCmd.h  MetaDataNode.h
src/maya/solver/: CMakeLists.txt  FootRollNode.cpp  FootRollNode.h  Ik2bSolver.cpp  Ik2bSolver.h  IkCommand.cpp  IkCommand.h
